--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "subjective",
-  "version": "1.0.2",
-  "description": "Type safety observable store for any app.",
+  "version": "1.1.0",
+  "description": "Type safety dispatcher and observable state",
   "keywords": [],
   "main": "./dist/subjective.umd.js",
   "module": "./dist/subjective.js",
@@ -63,7 +63,7 @@
     }
   },
   "peerDependencies": {
-    "rxjs": "5.5.0"
+    "rxjs": "^5.5.0"
   },
   "devDependencies": {
     "@types/jest": "21.1.6",
@@ -74,7 +74,7 @@
     "cross-env": "5.0.1",
     "cz-conventional-changelog": "2.0.0",
     "husky": "0.13.4",
-    "jest": "21.2.1",
+    "jest": "22.0.4",
     "lodash": "4.17.4",
     "prompt": "1.0.0",
     "replace-in-file": "2.5.0",
@@ -88,8 +88,8 @@
     "tslint": "5.4.3",
     "tslint-config-standard": "6.0.0",
     "typedoc": "0.9.0",
-    "typescript": "2.6.1",
+    "typescript": "2.6.2",
     "validate-commit-msg": "2.12.2",
-    "rxjs": "5.5.2"
+    "rxjs": "5.5.6"
   }
 }
