--- a/package.json
+++ b/package.json
@@ -74,6 +74,8 @@
   "devDependencies": {
     "@types/jest": "21.1.6",
     "@types/node": "7.0.29",
+    "@types/lodash": "4.14.104",
+    "lodash": "4.17.5",
     "colors": "1.1.2",
     "commitizen": "2.9.6",
     "coveralls": "2.13.1",
@@ -81,21 +83,20 @@
     "cz-conventional-changelog": "2.0.0",
     "husky": "0.13.4",
     "jest": "22.0.4",
-    "lodash": "4.17.4",
     "prompt": "1.0.0",
     "replace-in-file": "2.5.0",
     "rimraf": "2.6.1",
-    "rollup": "0.50.0",
-    "rollup-plugin-commonjs": "8.2.1",
-    "rollup-plugin-node-resolve": "3.0.0",
+    "rollup": "0.56.5",
+    "rollup-plugin-commonjs": "9.0.0",
+    "rollup-plugin-node-resolve": "3.2.0",
+    "rxjs": "5.5.6",
     "ts-jest": "20.0.6",
-    "ts-node": "3.0.6",
+    "ts-node": "5.0.1",
     "tsc-watch": "1.0.5",
     "tslint": "5.4.3",
     "tslint-config-standard": "6.0.0",
-    "typedoc": "0.9.0",
-    "typescript": "2.6.2",
-    "validate-commit-msg": "2.12.2",
-    "rxjs": "5.5.6"
+    "typedoc": "0.11.1",
+    "typescript": "2.7.2",
+    "validate-commit-msg": "2.12.2"
   }
 }
