build: add missing "typings" prop in order to avoid TS2.7 errors
+ bundle files have type suffixes
+ rollup config updated
+ index.js & index.d.ts removed

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "subjective",
   "version": "3.0.0",
-  "description": "Type safety dispatcher and observable state",
+  "description": "Subjective state management for your app.",
   "keywords": [
     "RxJS",
     "state",
@@ -9,12 +9,12 @@
     "React",
     "Redux"
   ],
-  "main": "./dist/subjective.umd.js",
-  "module": "./dist/subjective.js",
+  "main": "dist/subjective.cjs.js",
+  "module": "dist/subjective.esm.js",
+  "browser": "dist/subjective.umd.js",
+  "typings": "dist/types/subjective.d.ts",
   "files": [
-    "dist",
-    "index.d.ts",
-    "index.js"
+    "dist"
   ],
   "author": "otodockal <oto.dockal@gmail.com>",
   "repository": {
