--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
         "allowSyntheticDefaultImports": true,
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
-        "declarationDir": "dist",
+        "declarationDir": "dist/types",
         "outDir": "compiled"
     },
     "include": [
