--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "subjective",
-  "version": "3.1.0",
-  "description": "Subjective state management for your app.",
+  "version": "4.0.0",
+  "description": "Type safety state management.",
   "keywords": [
     "RxJS",
     "state",
