--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "prebuild": "rimraf dist",
     "build": "tsc && rollup -c && rimraf compiled && typedoc --out dist/docs --target es6 --theme minimal src",
     "start": "tsc-watch --onSuccess 'rollup -c'",
-    "test": "jest",
+    "test": "jest --detectLeaks",
     "test:watch": "jest --watch",
     "test:prod": "npm run lint && npm run test -- --coverage --no-cache",
     "deploy-docs": "ts-node tools/gh-pages-publish",
@@ -73,16 +73,16 @@
   },
   "devDependencies": {
     "@types/jest": "21.1.6",
-    "@types/node": "7.0.29",
     "@types/lodash": "4.14.104",
-    "lodash": "4.17.5",
+    "@types/node": "7.0.29",
     "colors": "1.1.2",
     "commitizen": "2.9.6",
     "coveralls": "2.13.1",
     "cross-env": "5.0.1",
     "cz-conventional-changelog": "2.0.0",
     "husky": "0.13.4",
-    "jest": "22.0.4",
+    "jest": "22.4.2",
+    "lodash": "4.17.5",
     "prompt": "1.0.0",
     "replace-in-file": "2.5.0",
     "rimraf": "2.6.1",
@@ -90,13 +90,14 @@
     "rollup-plugin-commonjs": "9.0.0",
     "rollup-plugin-node-resolve": "3.2.0",
     "rxjs": "5.5.6",
-    "ts-jest": "20.0.6",
+    "ts-jest": "22.4.1",
     "ts-node": "5.0.1",
     "tsc-watch": "1.0.5",
     "tslint": "5.4.3",
     "tslint-config-standard": "6.0.0",
     "typedoc": "0.11.1",
     "typescript": "2.7.2",
-    "validate-commit-msg": "2.12.2"
+    "validate-commit-msg": "2.12.2",
+    "weak": "1.0.1"
   }
 }
