--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     }
   },
   "peerDependencies": {
-    "rxjs": "^5.5.0"
+    "rxjs": "^6.0.0"
   },
   "devDependencies": {
     "@types/jest": "21.1.6",
@@ -91,14 +91,14 @@
     "rollup": "0.56.5",
     "rollup-plugin-commonjs": "9.0.0",
     "rollup-plugin-node-resolve": "3.2.0",
-    "rxjs": "6.0.0-beta.4",
+    "rxjs": "6.0.0",
     "ts-jest": "22.4.1",
-    "ts-node": "5.0.1",
+    "ts-node": "6.0.5",
     "tsc-watch": "1.0.5",
     "tslint": "5.4.3",
     "tslint-config-standard": "6.0.0",
     "typedoc": "0.11.1",
-    "typescript": "2.7.2",
+    "typescript": "2.8.3",
     "validate-commit-msg": "2.12.2",
     "weak": "1.0.1",
     "benchmark": "2.1.4"
