--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "tsc && rollup -c && rimraf compiled && typedoc --out dist/docs --target es6 --theme minimal src",
+    "build": "tsc && rollup -c && rimraf compiled",
     "start": "tsc-watch --onSuccess 'rollup -c'",
     "test": "jest --detectLeaks",
     "test:watch": "jest --watch",
@@ -74,7 +74,7 @@
     "rxjs": "^6.0.0"
   },
   "devDependencies": {
-    "@types/jest": "21.1.6",
+    "@types/jest": "22.2.3",
     "@types/lodash": "4.14.104",
     "@types/node": "7.0.29",
     "colors": "1.1.2",
@@ -83,7 +83,7 @@
     "cross-env": "5.0.1",
     "cz-conventional-changelog": "2.0.0",
     "husky": "0.13.4",
-    "jest": "22.4.2",
+    "jest": "23.1.0",
     "lodash": "4.17.5",
     "prompt": "1.0.0",
     "replace-in-file": "2.5.0",
@@ -92,12 +92,11 @@
     "rollup-plugin-commonjs": "9.0.0",
     "rollup-plugin-node-resolve": "3.2.0",
     "rxjs": "6.0.0",
-    "ts-jest": "22.4.1",
+    "ts-jest": "22.4.6",
     "ts-node": "6.0.5",
     "tsc-watch": "1.0.5",
-    "tslint": "5.4.3",
-    "tslint-config-standard": "6.0.0",
-    "typedoc": "0.11.1",
+    "tslint": "5.10.0",
+    "tslint-config-standard": "7.0.0",
     "typescript": "2.8.3",
     "validate-commit-msg": "2.12.2",
     "weak": "1.0.1",
