refactor: downgrade to RxJS 5.5 & TS 2.6

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
         "declarationDir": "dist/types",
-        "outDir": "compiled"
+        "outDir": "compiled",
+        "skipLibCheck": true
     },
     "include": [
         "src"
