--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
   },
   "jest": {
     "transform": {
-      ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+      ".(ts|tsx)": "ts-jest"
     },
     "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
     "moduleFileExtensions": [
@@ -71,7 +71,7 @@
     }
   },
   "peerDependencies": {
-    "rxjs": "^5.5.0"
+    "rxjs": "^6.0.0"
   },
   "devDependencies": {
     "@types/jest": "22.2.3",
@@ -91,13 +91,13 @@
     "rollup": "0.60.2",
     "rollup-plugin-commonjs": "9.1.3",
     "rollup-plugin-node-resolve": "3.3.0",
-    "rxjs": "5.5.11",
-    "ts-jest": "22.4.6",
-    "ts-node": "6.1.0",
+    "rxjs": "6.2.2",
+    "ts-jest": "23.1.3",
+    "ts-node": "7.0.1",
     "tsc-watch": "1.0.5",
     "tslint": "5.10.0",
     "tslint-config-standard": "7.0.0",
-    "typescript": "2.6.2",
+    "typescript": "2.8.4",
     "validate-commit-msg": "2.12.2",
     "weak": "1.0.1",
     "benchmark": "2.1.4"
